--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
   </div>
 
   <script>
-    const WHATSAPP_NUMBER = "1167907135";
+    // NÚMERO FORMATEADO CORRECTAMENTE PARA WHATSAPP
+    const WHATSAPP_NUMBER = "5491167907135"; 
     const RAW_MESSAGE = "HOLA";
 
     const encodedMessage = encodeURIComponent(RAW_MESSAGE);
